# ColliderML

./: .gitignore  404.html  Makefile  README.md  TEST_RESULTS.md  acat.html  ais25.html  changelog.html  codecov.yml  ctd25.html  hashmap.json  index.html  manifest.json  package-lock.json  pyproject.toml  pytest.ini  run_tests.py  setup.cfg  setup.py
assets/: acat.md.8NsPCeEk.lean.js  acat.md.B4KSvmAr.lean.js  acat.md.B7ocrFdu.lean.js  acat.md.BaJkV46r.lean.js  acat.md.BhSTJ6B4.js  acat.md.BlYcPcSd.js  acat.md.Bm3aeUTW.lean.js  acat.md.Bxn6r57O.lean.js  acat.md.C2EjGmjN.lean.js  acat.md.CHLGE9CC.lean.js  acat.md.CUesM-ZI.lean.js  acat.md.ChOwZ7qw.js  acat.md.ClUzCU9b.js  acat.md.D0JylPDy.js  acat.md.D1DhRNxw.js  acat.md.DE-FCpCE.lean.js  acat.md.DVfdPuW_.lean.js  acat.md.DWnBMD4t.lean.js  acat.md.DX7N4rA3.lean.js  acat.md.DfmHJA4G.lean.js  acat.md.DjNf8F9z.js  acat.md.DwshQyGQ.js  acat.md.DxM2B5pE.lean.js  acat.md.DyycS5yr.lean.js  acat.md.Fe90g91X.lean.js  acat.md.ImcPw-rd.lean.js  acat.md.RNgtL8dD.js  acat.md.RUEbcCNP.lean.js  acat.md._gZypyCA.lean.js  acat.md.rU0RHlme.lean.js  acat.md.sKXPC2Xw.js  acat.md.yWCZcXMx.js  ais25.md.1AG4dCUY.js  ais25.md.B6D6oFzH.lean.js  ais25.md.B7lxF20D.js  ais25.md.Czrzb_e1.js  ais25.md.DaPh9XbK.js  ais25.md.V1P8RZeu.js  app.B7q13tvm.js  app.BTDU3Deo.js  (+137 more)
colliderml/: __init__.py
docs/: acat.md  ais25.md  changelog.md  ctd25.md  index.md  mkdocs.yml  package.json
guide/: installation.html  introduction.html  quickstart.html
scripts/: cli.py  download_dataset.py  sync_changelog.mjs
search/: search_index.json
tests/: __init__.py  (+3 more)
(+41 files in other folders)
