[tool.poetry]
name = "colliderml"
version = "0.1.0"
description = "A modern machine learning library for high-energy physics data analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "colliderml"}]

[tool.poetry.dependencies]
python = "^3.8"
xrootd = "^5.6.0"
numpy = "^1.24.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"
mkdocs-material = "^9.4.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--cov=colliderml --cov-report=term-missing"
testpaths = ["tests"] 